--- a/cfg/erl2.conf.sample
+++ b/cfg/erl2.conf.sample
@@ -1,7 +1,7 @@
 [system]
 
 # Project Name
-project = Default Project
+# project = Default Project
 
 # logging to file on/off
 # disableFileLogging = False
@@ -11,13 +11,16 @@ project = Default Project
 # clockTwoLines = False
 
 
-[tank]
+[device]
 
-# Tank Identifier
-id = Tank 0
+# Device Type (tank or controller)
+# type = tank
+
+# Device Identifier
+# id = Tank 0
 
 # Physical Location
-location = Default Location
+# location = Default Location
 
 
 [virtualtemp]
