Revert "Merge branch 'main' of https://github.com/mikejankulaknoaa/ERL2"
This reverts commit cff261bae47b3c3e390ace1dc4bb92e557b41b0f, reversing
changes made to a4df86aebb8463fe00e51075efa2a0f9070662e6.

--- a/cfg/erl2.conf.sample
+++ b/cfg/erl2.conf.sample
@@ -1,7 +1,7 @@
 [system]
 
 # Project Name
-# project = Default Project
+project = Default Project
 
 # logging to file on/off
 # disableFileLogging = False
@@ -11,16 +11,13 @@
 # clockTwoLines = False
 
 
-[device]
+[tank]
 
-# Device Type (tank or controller)
-# type = tank
-
-# Device Identifier
-# id = Tank 0
+# Tank Identifier
+id = Tank 0
 
 # Physical Location
-# location = Default Location
+location = Default Location
 
 
 [virtualtemp]
